fix websocket decode & websocket payload download (#316)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,7 @@
   "proxySetting": "Proxy Setting",
   "systemProxy": "Set as System Proxy",
   "serverNotStart": "Proxy server not started",
+  "download": "Download",
 
   "start": "Start",
   "stop": "Stop",
