--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -252,7 +252,7 @@
   "pullConfigFail": "拉取配置失败, 请检查网络连接",
   "sync": "同步",
   "invalidQRCode": "无法识别的二维码",
-  "remoteConnectFail": "连接失败，请检查是否在同一局域网和防火墙是否允许",
+  "remoteConnectFail": "连接失败，请检查是否在同一局域网和防火墙是否允许, ios需要开启本地网络权限",
   "remoteConnectSuccessTips": "手机需要开启抓包才可以抓取请求哦",
 
   "windowMode": "窗口模式",
