Copy Raw Request (#508)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -134,6 +134,7 @@
   "copy": "Copy",
   "copyHost": "Copy Host",
   "copyUrl": "Copy URL",
+  "copyRawRequest": "Copy Raw Request",
   "copyRequestResponse": "Copy Request and Response",
   "copyCurl": "Copy cURL",
   "copyAsPythonRequests": "Copy as Python Requests",
