--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -336,5 +336,8 @@
   "appUpdateIgnoreBtnTxt": "Ignore",
 
   "requestMap": "Request Map",
-  "requestMapDescribe": "Do not request remote services, use local configuration or script for response"
+  "requestMapDescribe": "Do not request remote services, use local configuration or script for response",
+
+  "automatic": "Automatic",
+  "manual": "Manual"
 }
