--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -339,5 +339,7 @@
   "requestMapDescribe": "Do not request remote services, use local configuration or script for response",
 
   "automatic": "Automatic",
-  "manual": "Manual"
+  "manual": "Manual",
+
+  "openNewWindow": "Open New Window"
 }
