--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -338,5 +338,7 @@
   "requestMapDescribe": "不请求远程服务，使用本地配置或脚本进行响应",
 
   "automatic": "自动安装",
-  "manual": "手动安装"
+  "manual": "手动安装",
+
+  "openNewWindow": "新窗口打开"
 }
