Cert check reminder

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -340,6 +340,6 @@
 
   "automatic": "Automatic",
   "manual": "Manual",
-
+  "certNotInstalled": "Certificate not installed",
   "openNewWindow": "Open New Window"
 }
