--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -341,5 +341,10 @@
   "manual": "手动安装",
   "certNotInstalled": "证书未安装",
 
-  "openNewWindow": "新窗口打开"
+  "openNewWindow": "新窗口打开",
+  "sponsorDonate": "赞助 / 捐赠",
+  "sponsorSupport": "支持项目持续开发",
+  "sponsorThanks": "感谢支持开源项目，可选择以下任意方式，帮助项目长期发展",
+  "sponsorAfdian": "爱发电赞助",
+  "sponsorBuyMeCoffee": "Buy Me a Coffee"
 }
