Search support protocols and time-consuming queries

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -70,6 +70,7 @@
   "request": "Request",
   "response": "Response",
   "statusCode": "Status code",
+  "duration": "Duration",
 
   "done": "Done",
   "type": "Type",
