Mobile support report server

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -105,6 +105,12 @@
   "matchRule": "Match Rule",
   "emptyMatchAll": "Empty means match all",
   "newBuilt": "New",
+  "reportServers": "Report Servers",
+  "addReportServer": "Add Report Server",
+  "editReportServer": "Edit Report Server",
+  "serverUrl": "Server URL",
+  "compression": "Compression",
+  "compressionNone": "None",
   "newFolder": "New Folder",
   "enableSelect": "Enable Select",
   "disableSelect": "Disable Select",
