--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -103,6 +103,12 @@
   "matchRule": "符合規則",
   "emptyMatchAll": "為空表示符合全部",
   "newBuilt": "新建",
+  "reportServers": "上報伺服器",
+  "addReportServer": "新增上報伺服器",
+  "editReportServer": "編輯上報伺服器",
+  "serverUrl": "伺服器 URL",
+  "compression": "壓縮",
+  "compressionNone": "無",
   "newFolder": "新建資料夾",
   "enableSelect": "啟用選擇",
   "disableSelect": "停用選擇",
