--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -105,6 +105,12 @@
   "matchRule": "匹配规则",
   "emptyMatchAll": "为空表示匹配全部",
   "newBuilt": "新建",
+  "reportServers": "上报服务器",
+  "addReportServer": "新增上报服务器",
+  "editReportServer": "编辑上报服务器",
+  "serverUrl": "服务器 URL",
+  "compression": "压缩",
+  "compressionNone": "无",
   "newFolder": "新建文件夹",
   "enableSelect": "启用选择",
   "disableSelect": "禁用选择",
